[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tmux-cheat"
version = "1.0.0"
description = "tmux keyboard shortcuts and command cheat sheet CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
tmux-cheat = "tmux_cheat.cli:main"

[dependency-groups]
dev = [
    "hatchling",
]

[tool.hatch.build.targets.wheel]
packages = ["tmux_cheat"]
